依頼主修正依頼箇所を修正

--- a/portfolio/hair_salon_tokiwa.html
+++ b/portfolio/hair_salon_tokiwa.html
@@ -14,7 +14,7 @@
   <div class="wrapper">
     <!-- Header Area -->
     <div class="logo">
-      <img src="../img/IMG_5300.JPG" alt="hair_salon">
+      <img src="../img/logo1.png" alt="hair_salon">
       <ul>
         <li>営業時間 9:00-18:00
           <p class="time" font-size="5px">＊別途時間外相談受付けます</p>
@@ -56,26 +56,26 @@
             <td>
               <img src="../img/IMG_5260.JPG" class="concept" alt="spray">
               <p class="con">〜癒しの空間〜</p>
-              <p class="con2">==========================</p>
+              <p class="con2">=========================</p>
               <p class="con1">子供からお年寄りまで老若男女問わずに<br>
                 気軽にお話しができるお店です。</p>
               <br>
               <p>たま〜に手作りパンやケーキが出てくるよ〜</p>
               <p>メダカたちも待ってるよ〜</p>
               <br>
-              <p class="con2">==========================</p>
+              <p class="con2">=========================</p>
               </td>
               <td>
                 <img src="../img/IMG_5266 2.JPG" class="staff" alt="spray">
                 <p class="pr">〜プロフィール〜</p>
-                <p class="con2">==========================</p>
+                <p class="con2">=========================</p>
                 <p>【名前】 渡辺直美</p>
                 <p>【経歴】</p>
                 <p>昭和56年美容師免許取得</p>
                 <p>平成2年開業</p>
                 <p>平成10年現在地に移転</p>
-                <p>【趣味】 家庭菜園とスキューバーダイビング</p>
-                <p class="con2">==========================</p>
+                <p>【趣味】家庭菜園/スキューバダイビング/パン作り</p>
+                <p class="con3">=========================</p>
                 </td>
               </tr> 
          </table>
@@ -89,20 +89,33 @@
         <tr>
           <td><h2>メニュー</h2></td>
         </tr>
+        <tr>
           <td>
             <img src="../img/IMG_5288.JPG" class="products" alt="products">
-        </td>
-        <td>
         <ul>
+          <p class="menu4">=========================</p>
           <li>カット    3,500円〜</li>
           <li>パーマ    7,500円〜</li>
           <li>毛染め    5,000円〜</li>
           <li>縮毛矯正  10,000円〜</li>
-          <li>ヘアセット</li>
-          <li>着付け</li>
+          <li>ヘアセット 3,000円〜</li>
           <li>＊各種セット割引あります</li>
+          <br>
+          <br>
+          <p class="menu4">=========================</p>
         </ul>
       </td>
+      <td>
+        <img src="../img/IMG_5266 2.JPG" class="menu1" alt="kitsuke">
+        <p class="menu2">〜着付け〜</p>
+        <ul>
+          <p class="menu3">=========================</p>
+          <li>着付け    5,000円〜</li>
+          <li>成人式 七五三 卒業式 冠婚葬祭</li>
+          <li>各種御予約承ります</li>
+          <p class="menu5">=========================</p>
+        </ul>
+        </td>
         </tr>
       </table>
       </div>
@@ -121,9 +134,9 @@
               <li>詫間駅から詫間中学校方面へ車で15分</li>
               <li>わからなければお電話ください</li>
               <li>駐車場あり(2台)</li>
-              <li>入口にスロープあります</li>
+              <li>入口にスロープもございます</li>
               <li>車椅子の方もご利用頂けます</li>
-              <li>ご予約時お電話にてお伝え下さい</li>
+              <li>ご予約の際にお申し付けください</li>
             </ul>
           </td>
           <td><img src="../img/IMG_5301.JPG" width="55%"> </td>
@@ -135,7 +148,7 @@
     </div><!--end of access-->
     <br>
     <div class="footer">
-      <img src="../img/IMG_5300.JPG" alt="hair_salon">
+      <img src="../img/logo1.png" alt="hair_salon">
       <ul>
         <li>営業時間 9:00-18:00
           <p class="time" font-size="5px">＊別途時間外相談受付けます</p>
